Fixed background gradient stretch issue * Got rid of the ternary operator to determine which className to use in the Main component file * Added flex styles to the background-colors id element to stretch the background properly to the bottom * Got rid of the styles for the loading-background and non-loading-background classes in the media queries

--- a/frontend/src/components/Main/main.scss
+++ b/frontend/src/components/Main/main.scss
@@ -24,6 +24,9 @@
     #background-colors {
         background-image: linear-gradient(#1F0A02, #AE431F); 
         color: white;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
     }
 
 
@@ -58,10 +61,6 @@
     .left-side, .right-side {
         width: 100%;
     }
-
-    .loading-background {
-        height: 100vh;
-    }
 }
 
 @media only screen and (min-width: 601px) {
@@ -74,13 +73,6 @@
         margin-top: 0px;
     }
 
-    .non-loading-background {
-        height: 100%;
-    }
-
-    .loading-background {
-        height: 100vh;
-    }
 
     #panels-info {
         display: flex;
